log
Fri Mar 27 05:46:48 PM UTC 2026: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|6
total_score: 0/60
9ede7f1
Fri Mar 27 05:50:22 PM UTC 2026: 
 list.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/60
0e48c95
Fri Mar 27 05:52:39 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:81:20: error: ‘tail’ undeclared (first use in this function)
   81 |     if (current == tail)
      |                    ^~~~
list.c:81:20: note: each undeclared identifier is reported only once for each function it appears in
47f8346
Fri Mar 27 05:52:55 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/60
fa9a522
Fri Mar 27 05:54:21 PM UTC 2026: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/60
e26e3d7
Fri Mar 27 05:54:52 PM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
ba89c06
Fri Mar 27 06:07:30 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/60
623cc63
Fri Mar 27 06:08:46 PM UTC 2026: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/60
d89113c
Fri Mar 27 09:03:04 PM UTC 2026: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:38:6: error: expected expression before ‘List’
   38 |     *List newList = (List *)malloc(sizeof(List));
      |      ^~~~
list.c:39:5: error: ‘newList’ undeclared (first use in this function); did you mean ‘nextList’?
   39 |     newList->head = NULL;
      |     ^~~~~~~
      |     nextList
list.c:39:5: note: each undeclared identifier is reported only once for each function it appears in
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
3066521
Fri Mar 27 09:03:25 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 20/60
7fe5026
Fri Mar 27 09:05:29 PM UTC 2026: 
 tests:  2|4
total_score: 20/60
e6f2f79
Fri Mar 27 09:06:20 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:38:6: error: expected expression before ‘List’
   38 |     *List newList = (List *)malloc(sizeof(List));
      |      ^~~~
list.c:39:5: error: ‘newList’ undeclared (first use in this function); did you mean ‘nextList’?
   39 |     newList->head = NULL;
      |     ^~~~~~~
      |     nextList
list.c:39:5: note: each undeclared identifier is reported only once for each function it appears in
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
1b7c3e2
Fri Mar 27 09:06:46 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 20/60
617896e
Fri Mar 27 09:09:07 PM UTC 2026: 
 tests:  2|4
total_score: 20/60
84fc64a
Fri Mar 27 09:14:03 PM UTC 2026: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:51:19: error: expected expression before ‘List’
   51 |     void * data = List->head->data;
      |                   ^~~~
list.c:52:9: error: expected identifier or ‘(’ before ‘->’ token
   52 |     List->current = List->head;
      |         ^~
list.c: In function ‘nextList’:
list.c:57:9: error: expected identifier or ‘(’ before ‘->’ token
   57 |     List->current = List->current->next;
      |         ^~
list.c:58:19: error: expected expression before ‘List’
   58 |     void * data = List->current;
      |                   ^~~~
061d353
Fri Mar 27 09:14:53 PM UTC 2026: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
fcc928e
Fri Mar 27 09:16:05 PM UTC 2026: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:58:9: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
   58 |     if (current->next == NULL) return NULL;
      |         ^~~~~~~
      |         popCurrent
list.c:58:9: note: each undeclared identifier is reported only once for each function it appears in
f762837
Fri Mar 27 09:16:21 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 25/60
dd9486a
Fri Mar 27 09:21:03 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
60db132
Fri Mar 27 09:21:38 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:51:29: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
   51 |     if (list->head == NULL) return;
      |                             ^~~~~~
list.c:50:8: note: declared here
   50 | void * firstList(List * list) {
      |        ^~~~~~~~~
list.c: In function ‘nextList’:
list.c:58:38: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
   58 |     if (list->current->next == NULL) return;
      |                                      ^~~~~~
list.c:57:8: note: declared here
   57 | void * nextList(List * list) {
      |        ^~~~~~~~
80f2252
Fri Mar 27 09:23:04 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
8f275a7
Fri Mar 27 09:32:03 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f507d31
